2024-10-05  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (ebuild-repo-mode): Document the bug-reference
	feature.
	(devbook-mode): Add cross reference to the nXML Mode manual.

	* ebuild-mode.el (ebuild-repo-mode): Don't set the bug-reference-*
	variables if ebuild-mode-enable-bug-reference is nil. Test for
	bug-reference-prog-mode at run time instead of compile time.

2024-09-30  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-newsitem-mode.el (gentoo-newsitem-mode): Don't set
	font-lock-defaults.
	(gentoo-newsitem-add-font-lock): New function.
	(gentoo-newsitem-mode-hook): Add it to the mode hook.

	* test/gentoo-newsitem-mode-tests.el (gentoo-newsitem-test-input)
	(gentoo-newsitem-test-font-lock, gentoo-newsitem-test-skeleton)
	(gentoo-newsitem-test-keybindings): Shorten names.

	* test/ebuild-mode-tests.el (ebuild-mode-test-run-with-fixed-time):
	* test/glep-mode-tests.el (glep-mode-test-run-with-fixed-time):
	Use func-arity to detect the calling convention for encode-time.

	* test/ebuild-mode-tests.el (cl-letf, cl-letf*): Enclose their
	definition in eval-when-compile.
	(ebuild-mode-test-font-lock): Call font-lock-fontify-region
	instead of font-lock-fontify-buffer. This is silent and also
	avoids the noninteractive trickery.
	* test/gentoo-newsitem-mode-tests.el (cl-letf, cl-letf*)
	(gentoo-newsitem-mode-test-font-lock): Ditto.
	(gentoo-newsitem-mode-test-run-silently): Remove.

	* test/ebuild-mode-tests.el (ebuild-mode-test-skeleton):
	Remove unnecessary ebuild-mode-test-run-silently.
	* test/gentoo-newsitem-mode-tests.el
	(gentoo-newsitem-mode-test-skeleton): Remove unnecessary
	gentoo-newsitem-mode-test-run-silently.

2024-09-28  Ulrich Müller  <ulm@gentoo.org>

	* test/ebuild-mode-tests.el:
	* test/gentoo-newsitem-mode-tests.el: Drop redundant XEmacs
	conditionals.

	* test/xemacs-test-wrapper.el (skip-unless): New function.
	(test-skipped): New error symbol.
	(ert-deftest): Handle it.

	* ebuild-mode.el (ebuild-mode-enable-bug-reference):